--- a/keylime/Cargo.toml
+++ b/keylime/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+byteorder.workspace = true
 actix-web.workspace = true
 anyhow.workspace = true
 base64.workspace = true
